# Snake

./: .clang-format  CMakeLists.txt  README.md
app/: main.cc
src/: CMakeLists.txt  LinkedList.cc  LinkedList.h  extern_symbols.cc  extern_symbols.h  snake.cc  snake.h
tests/: CMakeLists.txt  main.cc
